# FirstProject

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  environment.yml
benchmarks/: benchmarks.ipynb  run_benchmarks.sh
benchmarks/100/128x128/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/100/128x128/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/100/128x128/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/100/128x128/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/100/256x256/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/100/256x256/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/100/256x256/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/100/256x256/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/1000/128x128/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/1000/128x128/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/1000/128x128/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/1000/128x128/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/1000/256x256/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/1000/256x256/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/1000/256x256/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/1000/256x256/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/1000/64x64/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/1000/64x64/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/1000/64x64/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/1000/64x64/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/400/128x128/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/400/128x128/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/400/128x128/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/400/128x128/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/400/256x256/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/400/256x256/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/400/256x256/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/400/256x256/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/400/64x64/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/400/64x64/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/400/64x64/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/400/64x64/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/fourier_analysis/: fourier_analysis.ipynb
cpp/: CMakeLists.txt
cpp/cfd/: CMakeLists.txt
cpp/cfd/include/: cfd.h  multigrid.h  simulations.h  staggered_grid.h
cpp/cfd/prog/: flow_over_step_2d.cpp  karman_vortex_street_2d.cpp  lid_driven_cavity_2d.cpp  plane_shear_flow_2d.cpp
cpp/cfd/src/: cfd.cpp  cfd_params.cpp  flow_over_step_2d.cpp  karman_vortex_street_2d.cpp  lid_driven_cavity_2d.cpp  multigrid.cpp  plane_shear_flow_2d.cpp  vtk.cpp
cpp/geometry/: CMakeLists.txt
cpp/homework/: CMakeLists.txt
cpp/homework/prog/: hausaufgabe_2.cpp
cpp/kernel/: CMakeLists.txt
cpp/kernel/include/: kernel.h  progressbar.h
cpp/kernel/src/: filehandler.cpp  kernel.cpp  timer.cpp
cpp/math/: CMakeLists.txt
cpp/math/include/: math.h
cpp/math/src/: radians.cpp
cpp/math/tests/: radians.cpp
cpp/maths/: CMakeLists.txt
cpp/maths/include/: maths.h
cpp/maths/src/: matrix.cpp  radians.cpp  radius.cpp  spectral.cpp
cpp/maths/tests/: icd.cpp  matrix.cpp  radians.cpp  radius.cpp  spectral.cpp
cpp/multigrid/: CMakeLists.txt
cpp/multigrid/include/: benchmark.h
cpp/multigrid/prog/: benchmark.cpp
cpp/pybind/: CMakeLists.txt
cpp/pybind/include/: pybind_iteration_solvers.h  pybind_kernel.h  pybind_krylov_solvers.h  pybind_maths.h  pybind_solvers.h
cpp/pybind/src/: main.cpp
cpp/pybind/src/iteration_solvers/: gauss_seidel.cpp  jacobi.cpp  richardson.cpp  trivial.cpp
cpp/pybind/src/kernel/: timer.cpp
cpp/pybind/src/krylov_solvers/: conjugate_gradient.cpp  preconditioned_conjugate_gradient.cpp
cpp/pybind/src/maths/: matrix.cpp  radius.cpp  spectral.cpp
cpp/pybind/src/solvers/: gauss_seidel.cpp  jacobi.cpp  richardson.cpp  trivial.cpp
cpp/pybind/tests/: test_gauss_seidel.py  test_jacobi.py  test_radians.py  test_radius.py  test_trivial.py
cpp/pybind/tests/iteration_solvers/: test_jacobi.py  test_richardson.py  test_trivial.py
cpp/pybind/tests/krylov_solvers/: test_conjugate_gradient.py  test_preconditioned_conjugate_gradient.py
cpp/pybind/tests/maths/: test_icd.py  test_matrix.py  test_spectral.py
cpp/pybind/tests/solvers/: test_gauss_seidel.py
cpp/solvers/: CMakeLists.txt
cpp/solvers/include/: iteration_solvers.h  krylov_solvers.h  solvers.h
cpp/solvers/src/: gauss_seidel.cpp  iteration_solver.cpp  jacobi.cpp  linear.cpp  richardson.cpp  trivial.cpp
cpp/solvers/src/iteration_solvers/: gauss_seidel.cpp  iteration_solver.cpp  jacobi.cpp  richardson.cpp  trivial.cpp
cpp/solvers/src/krylov_solvers/: conjugate_gradient.cpp  krylov_solver.cpp  preconditioned_conjugate_gradient.cpp
cpp/solvers/tests/: conjugate_gradient.cpp  gauss_seidel.cpp  jacobi.cpp  preconditioned_conjugate_gradient.cpp  richardson.cpp  trivial.cpp
python/: CMakeLists.txt  gs.py  jac.py
python-examples/: gs.py  jac.py  solving_matrix_market.py  triv.py
python/src/: main.cpp
python/tests/: gs.py  jac.py  triv.py
src/geometry/: CMakeLists.txt  sphere.cpp
src/geometry/include/: geometry.h
src/kernel/: CMakeLists.txt
